# retailr

./: .replit  build_windows.py  check_shop_info.py  create_logo.py  fix_add_product.py  fix_decimal_error.py  fix_shop_settings.py  fix_tax_percentage.py  main.py  new_shop_template.py  old_shop_template.txt  pos_data.db  pyproject.toml  read_excel.py  temp_product_data.txt  test_customer_data.py  test_data.py  test_decimal.db  test_decimal.py  test_excel_invoice.py  test_invoice.db  test_invoice_generation.py  test_invoice_shop_data.py  test_invoice_table_integration.py  test_outstanding_amount.py  test_payment_history.py  test_shop_info_invoice.py  test_simple.db  test_simple.py  test_simplified.py  test_tax_calculations.py  update_combobox_initial.py  update_edit_product.py  update_load_products.py  update_load_products_fixed.py  update_product_data.py  update_sales.py
assets/: styles.py
attached_assets/: Pasted--Build-a-more-resilient-query-based-on-available-columns-query-f--1746265170584.txt  Pasted-1-Post-building-and-installing-as-application-it-gives-error-after-checking-out-from-cart-the-error-1745647696581.txt  Pasted-App-Overview-Build-a-python-tk-inter-and-SQLite-based-offline-first-Point-of-Sale-POS-system-for-1745580768712.txt  Pasted-Debug-Error-adding-item-to-treeview-tuple-index-out-of-range-Item-data-32-12-4-1-900-0--1745667767601.txt  Pasted-Exception-in-Tkinter-callback-Traceback-most-recent-call-last-File-c-Users-ASUS-AppData-Loc-1745663751297.txt  bill template.docx  shop_bill.xlsx
database/: db_handler.py  schema.py
docs/: developer_guide.md  (+2 more)
(+27 files in other folders)
