[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyinstaller>=6.13.0",
    "reportlab>=4.4.0",
    "tkcalendar>=1.6.1",
    "xlsxwriter>=3.2.3",
]
